<resources>
    <string name="app_name" translatable="false">RETR0</string>
    <string name="API_KEY" translatable="false">AIzaSyCG1Q10KZ870wjWPqntn47uARDNzUGF8dI</string>
    <string name="GLOBAL_LOG" translatable="false">ALL_LOGS</string>
    <string name="PAGES_LOG" translatable="false">PAGES_LOGS</string>
    <string name="DATA_LOG" translatable="false">DATA_LOGS</string>

    <!-- Main Activity Text -->
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="get_started">Get Started</string>
    <string name="LogOut">Log Out</string>

    <!-- Info Text -->
    <string name="Name">Name : </string>
    <string name="EmailId">Email ID : </string>
    <string name="PhoneNumber">Phone Number : </string>
    <string name="Address">Address : </string>
    <string name="Description">Description : </string>
    <string name="Category">Category : </string>
    <string name="WantFor">Want For : </string>
    <string name="Owner">Owner : </string>
    <string name="Rating">Rating : </string>
    <string name="Review">Review : </string>
    <string name="PlaceHolder">Loading . . .</string>
    <string name="ConfirmPassword">Confirm Password : </string>
    <string name="Password">Password :</string>

    <!-- Page Titles -->
    <string name="ItemRequestFormTitle">Item Exchange Form</string>
    <string name="ItemDonateFormTitle">Item Donate Form</string>
    <string name="ItemDetailsTitle">Item Details</string>
    <string name="ProfilePageTitle">Profile</string>
    <string name="ItemsForExchange">Items For Exchange</string>
    <string name="ChooseLocation">Choose Your Location From the Map</string>
    <string name="SignUpPage">Sign Up Page</string>

    <!-- Hints -->
    <string name="EnterName">Enter Name</string>
    <string name="EnterCategory">Enter Item Category</string>
    <string name="EnterDesc">Enter Description</string>
    <string name="EnterWantFor">Enter Exchangeable Items</string>
    <string name="SearchHere">Search Here</string>
    <string name="EnterEmail">Enter Email ID</string>
    <string name="EnterPass">Enter Password</string>
    <string name="EnterReview">Enter Review Here</string>
    <string name="EnterPhoneNumber">Enter Phone Number</string>
    <string name="EnterAddress">Enter Address</string>
    <string name="ConfirmPasswordHint">Confirm Password</string>

    <!-- Button Texts -->
    <string name="Submit">Submit</string>
    <string name="Interested">Interested ?</string>
    <string name="UploadImage">Upload Image</string>
    <string name="ExchangeItem">Exchange Item</string>
    <string name="DonateItem">Donate Item</string>
    <string name="SubmitRating">Submit Rating</string>
    <string name="ChangeLocation">Change Your Exchange Location?</string>
    <string name="PublicPhoneText">Want Everyone to See your Phone Number ?</string>

    <!-- Alert Text -->
    <string name="DeleteItemTitle">Delete Item?</string>
    <string name="DeleteItemText">This Item entry will be deleted forever, Do you wish to Continue?</string>
    <string name="MapBackTitle">Go Back?</string>
    <string name="MapBackText">Changes will not be saved, You want to go Back?</string>
    <string name="DeleteItemYes">Yes</string>
    <string name="DeleteItemNo">No</string>
    <string name="create_new_user_account">New User? Create an Account?</string>
    <string name="create_new_ngo_account">New NGO? Create an Account?</string>
    <string name="ngo_login">NGO Login</string>
    <string name="welcome">Welcome</string>
    <string name="ngo_login_page">NGO Login Page</string>
    <string name="user_login">User Login</string>
    <string name="ngo_signup">NGO Signup</string>
    <string name="already_a_user">Already a User?</string>
    <string name="already_a_ngo">Already an NGO?</string>
    <string name="user_signup">User SignUp</string>
    <string name="ngo_name">NGO Name :</string>
    <string name="office_address">Office Address :</string>
    <string name="item_for_donation">Item For Donation</string>
    <string name="user_login_page">User Login Page</string>

    <string-array name="AdvancedSearchSpinnerData">
        <item>Item Name</item>
        <item>Item Category</item>
    </string-array>

    <string-array name="AdvancedSearchFilterData">
        <item>Rating</item>
        <item>Location</item>
    </string-array>

</resources>